<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_fragment_layout"/>


    <EditText
        android:id="@+id/idUserTv"
        android:hint="@string/id_hint"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:maxLines="1"
        android:textColorHint="#4DFFFFFF"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <requestFocus/>
    <EditText
        android:id="@+id/passwordTv"
        android:hint="@string/password_hint"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColorHint="#4DFFFFFF"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/noti_error_tv"
        android:textColor="#f10e0e"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:text="@string/not_valid_user"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_accept_btn"
        android:text="Login"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_button_background"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/create_account_tv"
        android:text="@string/create_new_account_text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>